--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://addf0617.github.io/shopping-website",
+  "homepage": "https://addf0617.github.io/shopping-website/",
   "name": "shopping-website",
   "version": "0.1.0",
   "private": true,
