--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://addf0617.github.io/shopping-website/",
+  "homepage": "https://addf0617.github.io/shopping-website",
   "name": "shopping-website",
   "version": "0.1.0",
   "private": true,
@@ -11,6 +11,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "serve": "^14.2.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
